--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "id": "hangoutschat",
-  "name": "Hangouts Chat",
+  "name": "Google Chat",
   "version": "1.1.1",
-  "description": "Hangouts Chat",
+  "description": "Google Chat",
   "main": "index.js",
   "author": "Stefan Malzner <stefan@adlk.io>",
   "license": "MIT",
